RESOLVED FIXED102740
[chromium] Handle pinch correctly in slow-scrolling area
https://bugs.webkit.org/show_bug.cgi?id=102740
Summary [chromium] Handle pinch correctly in slow-scrolling area
Alexandre Elias
Reported 2012-11-19 16:43:40 PST
[chromium] Handle pinch correctly in slow-scrolling area
Attachments
Patch (8.36 KB, patch)
2012-11-19 16:47 PST, Alexandre Elias
no flags
Patch (8.41 KB, patch)
2012-11-27 22:32 PST, Alexandre Elias
no flags
Alexandre Elias
Comment 1 2012-11-19 16:47:33 PST
Alexandre Elias
Comment 2 2012-11-19 16:49:55 PST
This is related (but independent from) the changes in http://codereview.chromium.org/11299083/
Sami Kyöstilä
Comment 3 2012-11-20 03:07:41 PST
lgtm, thanks.
Adam Barth
Comment 4 2012-11-20 11:27:55 PST
This looks like a patch for jamesr or enne to review.
WebKit Review Bot
Comment 5 2012-11-27 14:50:13 PST
Comment on attachment 175077 [details] Patch Rejecting attachment 175077 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: hing file Source/WebKit/chromium/src/WebCompositorInputHandlerImpl.h Hunk #1 succeeded at 96 (offset 3 lines). patching file Source/WebKit/chromium/tests/WebCompositorInputHandlerImplTest.cpp Hunk #1 FAILED at 259. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebKit/chromium/tests/WebCompositorInputHandlerImplTest.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'James Robi..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output: http://queues.webkit.org/results/15027176
Alexandre Elias
Comment 6 2012-11-27 22:32:16 PST
Created attachment 176399 [details] Patch Rebased to 135977
WebKit Review Bot
Comment 7 2012-11-28 11:12:03 PST
Comment on attachment 176399 [details] Patch Clearing flags on attachment: 176399 Committed r136029: <http://trac.webkit.org/changeset/136029>
WebKit Review Bot
Comment 8 2012-11-28 11:12:07 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.